add handler for update expert level
